# api/routes/adminAccess/orderStatus.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { orderStatus } from "../../controllers/orderStatus/orderStatusController.js";
+
+const router = Router();
+
+// paymentStatus
+router.post("/", orderStatus);
+
+export default router;
