# api/routes/adminAccess/paymentStatus.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { paymentStatus } from "../../controllers/paymentStatus/paymentStatusController.js";
+
+const router = Router();
+
+// paymentStatus
+router.post("/", paymentStatus);
+
+export default router;
