# api/swagger.yaml
@@ -678,12 +678,6 @@ paths:
           schema:
               type: string
               nullable: true
-        - name: sortBySales
-          in: query
-          description: Best Products 
-          schema:
-              type: boolean
-              nullable: true
         - name: isStar
           in: query
           description: the product highlighted 
@@ -1496,28 +1490,6 @@ paths:
           description: Unauthorized - Customer is not authenticated
       security:
         - api_key: []
-  /payment/status:
-    patch:
-      tags:
-        - payment
-      summary: Change the order status.
-      description: Change the order status to "Paid" or "Failed" or "Fully Refunded" or "Partially Refunded"
-      requestBody:
-        description: Sending the data required for updating the status order to the DB.
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PaymentStatusPATCH'
-        required: true
-      responses:
-        '204':
-          description: Successful operation
-        '401':
-          description: Unauthorized - Customer is not authenticated
-        '404':
-          description: Not found - The order doesn't exist.
-      security:
-        - api_key: []
 
 components:
   schemas:
@@ -1757,6 +1729,8 @@ components:
         properties:
           productId:
             type: string
+          variant: 
+            type: string
           customerId:
             type: string
           articleNumber:
@@ -1901,17 +1875,6 @@ components:
         label:
           type: string
           example: Bracelet
-        isArchived:
-          type: boolean
-          example: false
-        createdAt:
-          type: string
-          format: date-time
-          example: 2024-09-12T15:20:42.000Z
-        updatedAt:
-          type: string
-          format: date-time
-          example: 2024-09-12T15:20:42.000Z
     CategoryPOST:
       required:
         - label
@@ -1966,8 +1929,8 @@ components:
       type: object
       properties:
         firstHolderId:
-          type: integer
-          example: 987
+          type: string
+          example: "987"
         code:
           type: string
           example: 09hdf987BSK987
@@ -1984,28 +1947,25 @@ components:
           type: string
           example: 08/08/2025
         buyOrderId:
-          type: integer
-          example: 98702
+          type: string
+          example: "98702"
         usageHistory:           
           type: array
           items:
             type: object
             properties:
-              giftcardUsedId:
-                type: integer
-                example: 443
               usedByCustomerId:
-                type: integer
-                example: 7
-              amount_used:
+                type: string
+                example: "235"
+              amountUsed:
                 type: integer
                 example: 20
               usedAt:
                 type: string
                 example: 05/06/2025
               usedOrderId:
-                type: integer
-                example: 93857
+                type: string
+                example: "93857"
         createdAt:
           type: string
           example: 2024-03-21T17:50:38.100Z
@@ -2048,13 +2008,13 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: string
           example: 21
         orderId:
-          type: integer
+          type: string
           example: 5
         productId: 
-          type: integer
+          type: string
           example: 10
         reviewText:
           type: string
